@@ -754,6 +754,9 @@ jsp.search.advanced.type.series                                 = Series
 jsp.search.advanced.type.sponsor                                = Sponsor
 jsp.search.advanced.type.subject                                = Subject
 jsp.search.advanced.type.title                                  = Title
+jsp.search.error.invalid-search-string							= Invalid search string
+jsp.search.error.number-format-exception						= Number format exception
+jsp.search.error.query-too-broad								= Your query was too broad. Try a narrower query.
 jsp.search.general.next                                         = next
 jsp.search.general.noresults                                    = Search produced no results.
 jsp.search.general.previous                                     = previous
